--- a/css/mediaquery.css
+++ b/css/mediaquery.css
@@ -40,4 +40,59 @@
         width: 90vw !important;
       flex-basis: 100%;
     }
+ 
+    .searchbarul{
+        position: relative;
+    }
+    .searchitem{
+        display: block !important;
+    }
+    .searchbardiv{
+        position: absolute;
+        top: 10px;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: 0px 10px;
+         background-color: white; 
+         z-index: 999;
+         display: none;
+    }
+    .searchbar-form{
+        display: flex;
+    }
+    .open-searchformbtn{
+        display: block;
+        cursor: pointer;
+    }
+  
 }
+
+
+
+
+/* For screens 768px and below */
+@media (max-width: 768px) {
+    .shopping-guid-promo-first{
+        flex-direction: column;
+        margin-top: 10px;
+    }
+    .shopping-promo-img a img{
+        width: 100%;
+        object-fit: cover;
+    }
+    .shopping-promo-two-img{
+        width: 100% !important;
+    }
+    .shopping-promo-two-img a img{
+        width: 100%;
+        height: 150px !important;
+        object-fit: cover;
+    }
+    .first-best-saler-right-item{
+        flex-direction: column;
+    }
+    .welcometo-chika h1{
+        text-align: center;
+    }
+    }
