--- a/css/mediaquery.css
+++ b/css/mediaquery.css
@@ -1,6 +1,39 @@
 
 @media (max-width: 900px){
-   
+
+    /* nav */
+    .topnav{
+        background-color: white;
+        display: flex;
+        align-items:unset;
+        justify-content: space-between;
+      position: relative;
+        
+    }
+    .topul{
+        display: none;
+        align-items: unset;
+      gap: 20px;
+      flex-direction: column;
+      background-color: white;
+      position: absolute;
+      left: 40%;
+      right: 0;
+      top: 30px;
+      z-index: 99;
+      border-radius: 8px;
+    }
+    .topulmobileopen{
+        display: flex;
+    }
+    .closnav-btn {
+        display: block;
+    }
+
+.top-policies-div{
+    display: none;
+}
+    /* the end of nav */
     .category-and-main-div{
         position: relative;
        
