--- a/css/mediaquery.css
+++ b/css/mediaquery.css
@@ -145,6 +145,12 @@
         border: 2px solid white;
         transition: border 1s ease-in-out; */
     }
+    .mobile-cate{
+        display: block;
+    }
+    .categorys-icon-div{
+        display: none;
+    }
     }
 
     @media (min-width: 600px) {
