--- a/css/mediaquery.css
+++ b/css/mediaquery.css
@@ -22,7 +22,23 @@
       top: 30px;
       z-index: 99;
       border-radius: 8px;
+      animation-name: example;
+  animation-duration: 4s;
     }
+    @keyframes example {
+        0%   {
+            width: 20%;
+        }
+        25%  {
+            width: 40%;
+        }
+        50%  {
+            width: 80%;
+        }
+        100% {
+            width: 100%;
+        }
+      }
     .topulmobileopen{
         display: flex;
     }
@@ -47,13 +63,30 @@
         left: 0;
         right: 0;
         z-index: 999;
+        
     }
     .category-items{
         display: none;
     }
     .category-items-opend{
         display: block;
+        animation-name: example;
+        animation-duration: 4s;
     }
+    @keyframes example {
+        0%   {
+            width: 20%;
+        }
+        25%  {
+            width: 40%;
+        }
+        50%  {
+            width: 70%;
+        }
+        100% {
+            width: 100%;
+        }
+      }
 
     .best-salers-items-div{
         flex-direction: column;
