--- a/css/style.css
+++ b/css/style.css
@@ -544,8 +544,38 @@ a{
 
 
 
+/* footer */
+.footer{
+    background-color: #E8E8E8;
+    margin-top: 50px;
+}
+.footer p{
+    text-align: center;
+    color: black;
+}
+.useful-links{
+    display: flex;
+    justify-content: space-between;
+    padding: 5px 20px;
+    flex-wrap: wrap;
+}
+.social-media-footer{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+.footerul li a{
+    color: black;
+    font-size: 13px;
+}
+.footerul h6{
+    color: black;
+    font-size: 20px;
+}
+.social-media-footer li a i{
+    font-size: 24px;
+}
 
 
-
-
+/* the end of footer */
 
